Correct layout issues, add support for mac keyboard commands.

--- a/src/css/cvc.css
+++ b/src/css/cvc.css
@@ -1,6 +1,11 @@
+.cardjs .cvc-container {
+  width: 50%;
+  float: right;
+}
+
 .cardjs .cvc-wrapper {
   box-sizing: border-box;
-  padding-left: 5px;
+  margin-left: 5px;
 }
 .cardjs .cvc-wrapper .cvc {
   display: block;
