--- a/src/css/expiry.css
+++ b/src/css/expiry.css
@@ -1,14 +1,17 @@
+.cardjs .expiry-container {
+  width: 50%;
+  float: left;
+}
+
+
 .cardjs .expiry-wrapper {
   box-sizing: border-box;
 }
 
 
-
-
 .cardjs .expiry-wrapper {
-  padding-right: 5px;
+  margin-right: 5px;
 }
-
 
 
 .cardjs .expiry-wrapper .expiry-month {
@@ -22,7 +25,6 @@
   border-bottom-left-radius: 0;
   border-left: 0;
 }
-
 
 
 .cardjs .expiry-wrapper {
